2003-09-23  Roland Mas  <99.roland.mas@aist.enst.fr>

	* www/account/change_email.php: Removed duplicate colon from PHP,
	it belongs in the *.tab files.

	* www/download.php: Suppressed an SQL warning.

2003-09-21  Roland Mas  <99.roland.mas@aist.enst.fr>

	* www/register/projectinfo.php: Removed unnecessary hardcoded <h3>
	tag.  It's in the *.tab files anyway.

	* www/account/editsshkeys.php: Mentioned the delay in updating the
	authorized_keys file.

	* www/include/languages/Base.tab and other *.tab files: Fixed a
	few strings appearing in the project registration pages.

2003-09-18

	* [Christian] Applied Antoine Nivard suggestion to correct [ #505 ]
        Removed tracker tab when tracker is disabled in Layout.class

2003-09-17  Bo Jangeborg  <bo@softwave.se>

	* www/include/languages/Swedish.tab: full translation.

2003-09-17  Roland Mas  <mas@echo.fr>

	* docs/debian-guide.html: A few fixes, s/debian-sf/gforge/ and
	adding my own pages.

2003-09-16 Tom Copeland  <tom@infoether.com>

	* www/include/languages/Base.tab:
	Fixed bug [ #500 ] http://gforge.org/docs/site/ = 404

	* common/include/Group.class:
	Fixed bug [ #481 ] Group creation does not rollback 
	if FRSPackage not created

2003-09-15 Tom Copeland  <tom@infoether.com>

	* www/survey/admin/show_questions.php:
	Applied patch [ #498 ] Patch to fix tab problem in surveys

	* www/tracker/add.php:
	Applied patch [ #504 ] May Detailed description be wider 
	in tracker submissions?

2003-09-12 Tom Copeland  <tom@infoether.com>

	* gforge.spec:
	Applied patch [ #516 ] RPM dependency fixes

2003-09-09  Roland Mas  <mas@echo.fr>

	* www/include/languages/French.tab: A few encoding fixes and
	spelling errors.

2003-09-05 Tom Copeland  <tom@infoether.com>

	* common/include/Group.class:
	Fixed bug [ #494 ] "Project Approved" don't send e-mail

	* www/include/features_boxes.php
	Applied patch [ #490 ] Deleted projects can appear inside 
	the "Most Active this week" section

	* www/mail/admin/index.php