@@ -758,7 +758,7 @@ forum_utils	posted	Message envoyé
 forum_utils	postedby	Posté par
 forum_utils	reply	répondre
 forum_utils	saveplace	Sauvegarder cet endroit
-forum_utils	stopmonitor	Arrêter  la surveillance
+forum_utils	stopmonitor	Arrêter la surveillance
 forum_utils	subject	Sujet:
 forum_utils	summary	Résumé
 forum_utils	thread	File de message
@@ -970,8 +970,10 @@ my	bookmarks	Mes signets
 my	monitoredfile	Fichiers que vous surveillez
 my	monitoredforum	Forums que vous surveillez
 my	no_bookmarks	Vous n'avez pas encore de signets
-my	no_monitored_filemodules	<h3>Vous ne surveillez pas de fichiers</h3><p>Si vous surveillez des fichiers
-my	no_monitored_forums	<h3>Vous ne surveillez pas de forums</h3>Si vous surveillez des forums
+my	no_monitored_filemodules	Vous ne surveillez pas de fichiers
+my	no_monitored_filemodules_details	<p>Si vous surveillez des fichiers, vous serez prévenu de toutes les nouvelles sorties par un e-mail, qui contiendra un lien vers le nouveau fichier sur le serveur de téléchargement.</p><p>Vous pouvez surveiller des fichier en visitant la page de « Survol » d'un projet en en cliquant sur l'icône « enveloppe » dans la section fichiers.</p>
+my	no_monitored_forums	Vous ne surveillez pas de forums
+my	no_monitored_forums_details	<p>Si vous surveillez des forums, les nouveaux articles pûbliés vous seront envoyés dans un e-mail, qui contiendra un lien vers l'article.</p><p>Vous pouvez surveiller des forums en cliquant sur le lien « Surveiller le forum » présent sur le forum.</p>
 my	no_open_tasks	Aucune tâche ne vous est confiée.
 my	no_projects	Vous ne faites partie d'aucun projet.
 my	no_tracker_items_assigned	Aucun objet de traceur ne vous est confié.
