@@ -357,8 +357,10 @@ menu	code_snippet	サンプルコード
 menu	admin	管理
 my	about_blurb	パーソナルページにはメンバーであるグループのリストや割り当てられているバグおよびタスクのリストなどを含んでいます。
 my	no_bookmarks	今のところ、ブックマークされたページはありません。
-my	no_monitored_filemodules	<h3>ファイルをモニタリングしていません</h3><p>ファイルのモニタリングをするとメールでのニューリリースのお知らせを受けることができます。そのお知らせの中には新規ファイルへのリンクもふくまれています。<p>ファイルをモニタリングするには、プロジェクトのサマリーページを開いてファイルセクションにあるチェックボックスをチェックしてください。<br>&nbsp;
-my	no_monitored_forums	<h3>フォーラムをモニタリングしていません。</h3><p>フォーラムをモニタリングしているとフォーラムに対し新規投稿があった時、メールでお知らせすることができます。このメールの中には投稿されたメッセージへのリンクが含まれています。<p>フォーラムをモニタリングするにはフォーラム中の"モニタフォーラム"をクリックしてください。<br>&nbsp;
+my	no_monitored_filemodules	ファイルをモニタリングしていません。
+my	no_monitored_filemodules_details	<p>ファイルのモニタリングをするとメールでのニューリリースのお知らせを受けることができます。そのお知らせの中には新規ファイルへのリンクもふくまれています。<p>ファイルをモニタリングするには、プロジェクトのサマリーページを開いてファイルセクションにあるチェックボックスをチェックしてください。<br>&nbsp;
+my	no_monitored_forums	フォーラムをモニタリングしていません。
+my	no_monitored_forums_details	<p>フォーラムをモニタリングしているとフォーラムに対し新規投稿があった時、メールでお知らせすることができます。このメールの中には投稿されたメッセージへのリンクが含まれています。<p>フォーラムをモニタリングするにはフォーラム中の"モニタフォーラム"をクリックしてください。<br>&nbsp;
 my	no_open_tasks	あなたに割り当てられたタスクはありません。
 my	no_projects	あなたはアクティブプロジェクトのメンバーではありません。
 my	no_tracker_items_assigned	あなたに与えられたトラッカーアイテムはありません。
